--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@
 /rust-src-semver
 /generated
 /target
+
+.DS_Store
+/.build
+/Packages
+/*.xcodeproj
+xcuserdata/
+DerivedData/
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+
+/.vscode
