--- a/.github/workflows/test-swift.yml
+++ b/.github/workflows/test-swift.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run tests
-      run: cd Semver && swift test -v
+      run: swift test -v
