reorganisation & full prerelease support
- new toString for Version
- Versions are now comparable
- Full support for Prerelease in Version
- Reorganisation of the workspace

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-SemverBridge/** linguist-generated
-generated/** linguist-generated
+SemverSwiftBridge/** linguist-generated
+**/generated/** linguist-generated
